[package]
name = "server"
version = "0.1.0"
authors = ["Laetitia Fesselier <laetitia@leeroy.ca>"]
edition = "2018"

[dependencies]
actix = "0.8.1"
actix-web = "1.0.0-beta.4"
actix-web-actors = "1.0.0-beta.4"
actix-files = "0.1.0-beta.4"
env_logger = "0.6"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

listenfd = "0.3"
byteorder = "1"
bytes = "0.4.12"
protobuf = "2.6.1"
bincode = "1.1.4"
retry = "0.5.0"
log = "0.4.6"

[build-dependencies]
protoc-rust = "2.0"
